-Centered All Nav Links for both mobile & computer -Changed Theme Button to have white outline on both themes -Changed Navlink Active border from black to white-ish -Gave each navlink a hover state to add black Border -Gave each navlink an 'invisble' border to prevent navbar slighty shrinking & growing with navlink borders applied/removed. -Shrunk sizing of text elements in cookie message as they appeared too big in mobile browsers -Properly styled Cookie Message w/ color theme switching -Changed cookie message's FA Exit hover color to red to fit both themes better
Now all that fine tuning is done, now we test with mobile and wait for the moment of truth...

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -7,13 +7,24 @@
 }
 
 .fa-times-circle:hover {
-    color: white;
+    color: red;
 }
 
 .nav-link.active {
+    border: 1px solid var(--general-dark-text-color);
+    border-radius: 10px;
+}
+/*WORKAROUND TO PREVENT NAVBAR FROM INCREASING/DECREASING 1px IN HEIGHT*/
+.nav-link:not(.active) {
+    border: 1px solid transparent;
+    border-radius: 10px;
+}
+
+.nav-link:not(.active):hover {
     border: 1px solid var(--general-light-text-color);
     border-radius: 10px;
 }
+
 /*////////////////////////////////////////////////////////////////////*/
 html, body {
     /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
