--- a/wwwroot/css/color_themes.css
+++ b/wwwroot/css/color_themes.css
@@ -36,6 +36,14 @@
 .dark_border {
     background-image: linear-gradient(180deg, var(--general-dark-border-color-start), var(--general-dark-border-color-end));
 }
+
+.cookie-msg-icon-light-border {
+    border-bottom: 3px solid var(--general-light-text-color);
+}
+/*.cookie-msg-text-div-light-border {
+    border-left: 3px solid var(--general-light-text-color);
+    border-right: 3px solid var(--general-light-text-color);
+}*/
 /*////////////////////////////////////////////////*/
 /*DARK Color Themes*/
 .dark_nav {
@@ -53,4 +61,12 @@
 .dark_border {
     background-image: linear-gradient(180deg, var(--general-dark-border-color-start), var(--general-dark-border-color-end));
 }
+
+.cookie-msg-icon-dark-border {
+    border-bottom: 3px solid var(--general-dark-text-color);
+}
+/*.cookie-msg-text-div-dark-border {
+    border-left: 3px solid var(--general-dark-text-color);
+    border-right: 3px solid var(--general-dark-text-color);
+}*/
 /*////////////////////////////////////////////////*/
